--- a/privacy-engineer.html
+++ b/privacy-engineer.html
@@ -63,7 +63,7 @@
 <p><span class="badge badge-light">Melbourne Australia Melbourne Australia Melbourne</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opkdafwQ&__jvst=Employee+Referral&__jvsd=stnrHhwK&__jvsc=Twitter&bid=nfSljMw2'>ServiceNow Careers - Privacy Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opkdafwQ&__jvst=Employee+Referral&__jvsd=stnrHhwK&__jvsc=Twitter&bid=nfSljMw2'>ServiceNow Careers - Privacy Analyst</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
@@ -104,11 +104,11 @@ application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Bangkok</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gloo/a3a61d7a-15be-434f-94b6-41184a840fce'>Gloo - Privacy Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/gloo/a3a61d7a-15be-434f-94b6-41184a840fce'>Gloo - Privacy Analyst</a></h5> 
 <p><span class="badge badge-light">Boulder Boulder, Colorado</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/goldstonepartners/743999697192565-privacy-analyst'>Goldstone Partners, Inc. Privacy Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/goldstonepartners/743999697192565-privacy-analyst'>Goldstone Partners, Inc. Privacy Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Boulder Boulder, Colorado</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -116,11 +116,11 @@ application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://seclab.cs.washington.edu/'>Security and Privacy Research Lab ? Paul G. Allen School of Computer Science &amp; Engineering, University of Washington</a></h5> 
+<h5><a href='https://seclab.cs.washington.edu/'>Security and Privacy Research Lab ? Paul G. Allen School of Computer Science &amp; Engineering, University of Washington</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Verisk/743999696786128-data-security-and-privacy-specialist'>Verisk Data Security and Privacy Specialist | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Verisk/743999696786128-data-security-and-privacy-specialist'>Verisk Data Security and Privacy Specialist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
@@ -170,7 +170,7 @@ experience?...</p>
 <p><span class="badge badge-light">Philadelphia, Pennsylvania</span></p>
 <p>Posted on: 2019-09-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opkdafwQ&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nFJiJLwF'>ServiceNow Careers - Privacy Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opkdafwQ&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nFJiJLwF'>ServiceNow Careers - Privacy Analyst</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-09-18</p>
 <hr/>
@@ -302,7 +302,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/reachire/57ca88ba-f6b2-4cc5-859b-83113340ee7c'>reacHIRE - Fidelity Investments - Privacy Compliance Analyst (Return-to-Work Program)</a></h5> 
+<h5><a href='https://jobs.lever.co/reachire/57ca88ba-f6b2-4cc5-859b-83113340ee7c'>reacHIRE - Fidelity Investments - Privacy Compliance Analyst (Return-to-Work Program)</a></h5> 
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
@@ -310,7 +310,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light"></span></p>
 <p>Jun 19, 2019 ... Apply online for the job of Privacy Analyst at TechOp Solutions International.</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/1901group/job/otyqafwl'>1901 Group Careers - Security &amp; Privacy Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/1901group/job/otyqafwl'>1901 Group Careers - Security &amp; Privacy Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-01</p>
 <hr/>
@@ -338,7 +338,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://frb.referrals.selectminds.com/jobs/data-privacy-associate-new-jersey-location-8984'>Data Privacy Associate (New Jersey location) - The Federal Reserve System Careers</a></h5> 
+<h5><a href='https://frb.referrals.selectminds.com/jobs/data-privacy-associate-new-jersey-location-8984'>Data Privacy Associate (New Jersey location) - The Federal Reserve System Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-11</p>
 <hr/>
@@ -346,7 +346,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light">Redwood City</span></p>
 <p>Posted on: 2019-06-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/shopee/jobs/4311067002'>Job Application for Information Security &amp; Privacy Analyst at Shopee</a></h5> 
+<h5><a href='https://boards.greenhouse.io/shopee/jobs/4311067002'>Job Application for Information Security &amp; Privacy Analyst at Shopee</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-03</p>
 <hr/>
@@ -362,7 +362,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/lyft/jobs/4286343002?gh_jid=4286343002'>Job Application for Privacy Analyst at Lyft</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lyft/jobs/4286343002?gh_jid=4286343002'>Job Application for Privacy Analyst at Lyft</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Privacy Analyst. at Lyft. San Francisco, CA and Seattle, WA. At Lyft, community is 
 what we are and it's what we do. It's what makes us different. To create the best?...</p>
@@ -417,7 +417,7 @@ affect?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/avant/a9e7a489-3442-4e2c-9f05-e945b5e75c2f'>Avant - Privacy Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/avant/a9e7a489-3442-4e2c-9f05-e945b5e75c2f'>Avant - Privacy Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
@@ -429,7 +429,7 @@ affect?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/trevacorporation/job/q6grj7prd99phmnomyoujk5qdh'>Integrity Compliance Privacy Specialist - Boise, ID | Treva Corporation</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/trevacorporation/job/q6grj7prd99phmnomyoujk5qdh'>Integrity Compliance Privacy Specialist - Boise, ID | Treva Corporation</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
