--- a/ui.html
+++ b/ui.html
@@ -68,7 +68,7 @@
 <p><span class="badge badge-light">Brazil  North America</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/McFadyenDigital/743999698475280-ui-architect'>McFadyen Digital UI Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/McFadyenDigital/743999698475280-ui-architect'>McFadyen Digital UI Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Kochi, Kerala, India  North America</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -96,11 +96,11 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/5625/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/5625/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/5626/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/5626/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -188,7 +188,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ah-recruitment.join.com/jobs/465244-it-application-consultant-m-w-d-sap-co-pc-produktkosten-controlling'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Munic... | JOIN</a></h5> 
+<h5><a href='https://ah-recruitment.join.com/jobs/465244-it-application-consultant-m-w-d-sap-co-pc-produktkosten-controlling'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Munic... | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -200,7 +200,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/17223-UI-UX-Designer-m-w-d?source=twitter'>
+<h5><a href='https://dribbble.com/jobs/17223-UI-UX-Designer-m-w-d?source=twitter'>
       UI/UX Designer (m/w/d) at Lotum - Bad Nauheim - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -238,7 +238,7 @@
 <p><span class="badge badge-light">Kerala, India  North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/ui-ux-designer-experian-nottingham-14084'>UI / UX Designer - Experian - Nottingham - Experian Careers</a></h5> 
+<h5><a href='https://experian.referrals.selectminds.com/jobs/ui-ux-designer-experian-nottingham-14084'>UI / UX Designer - Experian - Nottingham - Experian Careers</a></h5> 
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -290,7 +290,7 @@
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/IBIGroup/743999698317746-ux-ui-designer'>IBI Group UX/UI Designer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/IBIGroup/743999698317746-ux-ui-designer'>IBI Group UX/UI Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Burnaby Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -350,7 +350,7 @@
 <p><span class="badge badge-light">Foster City, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.recruitireland.com/jobs/employers/EXCEL%20RECRUITMENT'>EXCEL RECRUITMENT | RecruitIreland.com</a></h5> 
+<h5><a href='https://www.recruitireland.com/jobs/employers/EXCEL%20RECRUITMENT'>EXCEL RECRUITMENT | RecruitIreland.com</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -380,7 +380,7 @@
 <p><span class="badge badge-light">Canada  Canada Richmond</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.oaujuice.com.ng/careers/'>Careers - OAU JUICE</a></h5> 
+<h5><a href='https://www.oaujuice.com.ng/careers/'>Careers - OAU JUICE</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -392,7 +392,7 @@
 <p><span class="badge badge-light">Hyderabad, India  Hyderabad</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BuzzClanLLC/743999698540759-senior-system-architect-with-pega-ui'>BuzzClan LLC Senior System Architect with Pega  UI | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BuzzClanLLC/743999698540759-senior-system-architect-with-pega-ui'>BuzzClan LLC Senior System Architect with Pega  UI | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Irving, TX</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -418,7 +418,7 @@
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://we-recruit.join.com/jobs/471554-finanz-recruitment-teamleiter-100'>Job @ WE RECRUIT (Z?rich): Finanz Recruitment Team... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://we-recruit.join.com/jobs/471554-finanz-recruitment-teamleiter-100'>Job @ WE RECRUIT (Z?rich): Finanz Recruitment Team... | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
